[gd_scene load_steps=4 format=3 uid="uid://fkbbq4s4i7qu"]

[ext_resource type="Script" uid="uid://dgkdr1rj0x0pe" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGenomeObjectSelector/ScrollRegionInternalsView/ScrollRegionInternalsViewItem.gd" id="1_v74x2"]
[ext_resource type="PackedScene" uid="uid://lbyao7dlu4ga" path="res://BrainVisualizer/UI/GenericElements/Buttons/PanelContainerButton/PanelContainerButton.tscn" id="2_7h3ma"]
[ext_resource type="Texture2D" uid="uid://c4aoq8epoq5dr" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Triangle_Right_S.png" id="3_lqhgv"]

[node name="ScrollRegionInternalsViewItem" type="BoxContainer"]
offset_right = 190.0
offset_bottom = 43.0
script = ExtResource("1_v74x2")

[node name="PanelContainerButton" parent="." instance=ExtResource("2_7h3ma")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainerButton"]
layout_mode = 2

[node name="gap" type="Control" parent="PanelContainerButton/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerButton/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="CheckButton" type="CheckBox" parent="PanelContainerButton/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainerButton/HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="Name" type="Label" parent="PanelContainerButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "NAME"
horizontal_alignment = 1

[node name="Arrow" type="TextureRect" parent="PanelContainerButton/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_lqhgv")
expand_mode = 2

[connection signal="pressed" from="PanelContainerButton" to="." method="_background_pressed"]
[connection signal="toggled" from="PanelContainerButton/HBoxContainer/VBoxContainer/CheckButton" to="." method="_checkbox_toggled"]
